--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta charset="utf-8" />
-    <title><i class="icon-github-squared"></i>lheido Web</title>
+    <title>lheido Web</title>
     <link rel="stylesheet" href="assets/css/design.css" />
     <link rel="stylesheet" href="assets/css/pack_icon_lheido_web.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -14,14 +14,14 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home"><i class="icon-home"></i></a></li>
-                <li><a href="#android-projects"><i class="icon-android"></i></a></li>
-                <li><a href="#web-projects"><i class="icon-firefox"></i></a></li>
+                <li><a href="#home"><i class="icon-home"></i><span>Home</span></a></li>
+                <li><a href="#android-projects"><i class="icon-android"></i><span>Projets Android</span></a></li>
+                <li><a href="#web-projects"><i class="icon-firefox"></i><span>Projets Web</span></a></li>
             </ul>
         </nav>
     </header>
-    <div id="home" class="page"></div>
-    <div id="android-projects" class="page"></div>
-    <div id="web-projects" class="page"></div>
+    <div id="home" class="page"></div><!-- end #home -->
+    <div id="android-projects" class="page"></div><!-- end #android-projects -->
+    <div id="web-projects" class="page"></div><!-- end #web-projects -->
 </body>
 </html>
