reglage des classe page, content-wrapper et content. Début de la page principale

--- a/index.html
+++ b/index.html
@@ -14,14 +14,44 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home"><i class="icon-home"></i><span>Home</span></a></li>
-                <li><a href="#android-projects"><i class="icon-android"></i><span>Projets Android</span></a></li>
-                <li><a href="#web-projects"><i class="icon-firefox"></i><span>Projets Web</span></a></li>
+                <li><a href="#home"><i class="icon-home"></i>Accueil</a></li>
+                <li><a href="#android-projects"><i class="icon-android"></i>Projets Android</a></li>
+                <li><a href="#web-projects"><i class="icon-firefox"></i>Projets Web</a></li>
             </ul>
         </nav>
+        <div id="toggle-nav"></div>
     </header>
-    <div id="home" class="page"></div><!-- end #home -->
-    <div id="android-projects" class="page"></div><!-- end #android-projects -->
-    <div id="web-projects" class="page"></div><!-- end #web-projects -->
+    <div id="site-wrapper">
+        <div id="home" class="page">
+            <div class="content-wrapper">
+                <div class="content">
+                    <p>
+                        Étudiant en informatique, je me passionne pour les technologies web et mobile depuis plus de 2 ans.
+                        J'ai commencé à programmer en autodidacte avec Python il y a maintenant 4 ans et continue de m'en servir même pour le web.
+                        Vous trouverez sur ce site quelques-uns de mes projets, autant web que mobile ou desktop et ci-dessous une vue d'ensemble
+                        des langages, frameworks et logiciels que j'utilise ainsi que mon parcours post-bac.
+                        Bonne visite!
+                    </p>
+                    <h1>Treille Léonard</h1>
+                    <a href="https://github.com/lheido"><i class="icon-github-squared"></i></a>
+                    <section>
+
+                    </section>
+                </div>
+            </div>
+        </div><!-- end #home -->
+        <div id="android-projects" class="page">
+            <div class="content-wrapper">
+                <div class="content">
+                </div>
+            </div>
+        </div><!-- end #android-projects -->
+        <div id="web-projects" class="page">
+            <div class="content-wrapper">
+                <div class="content">
+                </div>
+            </div>
+        </div><!-- end #web-projects -->
+    </div>
 </body>
 </html>
