ajout d'un second breakpoint et de la section formation

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
                     <h1>Treille Léonard</h1>
                     <a href="https://github.com/lheido"><i class="icon-github-squared"></i></a>
                     <section>
-
+                        <ul>
+                            <li>Licence Professionnelle SMIN - IUT 1 Grenoble</li>
+                            <li>Licence Informatique L1 et L2</li>
+                            <li>BTS audiovisuel - Villefontaine </li>
+                            <li>Baccalauréat STI</li>
+                        </ul>
                     </section>
                 </div>
             </div>
