ajout class deco et la deco pour le page home

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <div id="home" class="page">
             <div class="content-wrapper">
                 <div class="content">
+                    <div class="deco">
+                        <div id="deco-home1"></div>
+                        <div id="deco-home2"></div>
+                        <div id="deco-home3"></div>
+                        <div id="deco-home4"></div>
+                        <div id="deco-home5"></div>
+                        <div id="deco-home6"></div>
+                    </div>
                     <h1>Treille Léonard</h1>
                     <a href="https://github.com/lheido"><i class="icon-github-squared"></i></a>
                     <p>
