--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
             </div>
         </div><!-- end #web-projects -->
     </div>
+    <script src="assets/js/dist.js"></script>
 </body>
 </html>
