ajout du onclick sur le toggleNav avec animation (Arrow<-to->Burger)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
                 <li><a href="#web-projects"><i class="icon-firefox"></i>Projets Web</a></li>
             </ul>
         </nav>
-        <div id="toggle-nav"></div>
+        <div id="toggle-nav">
+            <div id="burger-wrapper">
+                <div class="burger"></div>
+                <div class="burger"></div>
+                <div class="burger"></div>
+            </div>
+        </div>
     </header>
     <div id="site-wrapper">
         <div id="home" class="page">
