change menu items effect again, ripple!

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul>
-                <li class="active"><a href="#home"><i class="icon-home"></i>Accueil</a></li>
+                <li><a href="#home"><i class="icon-home"></i>Accueil</a></li>
                 <li><a href="#android-projects"><i class="icon-android"></i>Projets Android</a></li>
                 <li><a href="#web-projects"><i class="icon-firefox"></i>Projets Web</a></li>
             </ul>
