ajustement design accueil, ajout des section 'mes compétences' et 'mes qualités' et changement du texte de présentation

--- a/index.html
+++ b/index.html
@@ -39,15 +39,11 @@
                         <div id="deco-home5"></div>
                     </div>
                     <h1>Treille Léonard</h1>
-                    <a href="https://github.com/lheido"><i class="icon-github-squared"></i></a>
+                    <a id="profile-github" href="https://github.com/lheido"><i class="icon-github-squared"></i></a>
                     <p>
-                        Étudiant en informatique, je me passionne pour les technologies web et mobile depuis plus de 2 ans.
-                        J'ai commencé à programmer en autodidacte avec Python il y a maintenant 4 ans et continue de m'en servir même pour le web.
-                        Vous trouverez sur ce site quelques-uns de mes projets, autant web que mobile ou desktop et ci-dessous une vue d'ensemble
-                        des langages, frameworks et logiciels que j'utilise ainsi que mon parcours post-bac.
-                        Bonne visite!
+                        Étudiant en informatique, je me passionne pour les technologies web et l'informatique de manière générale. Je suis également fervent défenseur du logiciel libre, ainsi tous mes projets personnels sont sous licence open source et hébergés ici même, sur  <a href="https://github.com">Github<i class="icon-github-squared"></i></a>. Sur cette page vous pourrez en apprendre un peu plus sur moi... enfin surtout sur mon parcours et mes compétences ! Sur les autres pages se trouvent la liste non exhaustive de mes projets catégorisés, car il le faut bien, suivant ces thèmes : Android et Web.
                     </p>
-                    <section>
+                    <section class="formations">
                         <ul>
                             <li>Licence Professionnelle SMIN - IUT 1 Grenoble</li>
                             <li>Licence Informatique L1 et L2</li>
@@ -55,6 +51,27 @@
                             <li>Baccalauréat STI</li>
                         </ul>
                     </section>
+                    <div class="info">
+                        <section>
+                            <h4>Mes Compétences</h4>
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                                <li>Java</li>
+                                <li>Android</li>
+                                <li>Python</li>
+                                <li>PHP/SQL</li>
+                            </ul>
+                        </section><section>
+                            <h4>Mes Qualités</h4>
+                            <ul>
+                                <li>Autonome</li>
+                                <li>Curieux</li>
+                                <li>Rigoureux</li>
+                            </ul>
+                        </section>
+                    </div>
                 </div>
             </div>
         </div><!-- end #home -->
