maj project style, translateX content when appear

--- a/index.html
+++ b/index.html
@@ -78,12 +78,21 @@
         <div id="android-projects" class="page">
             <div class="content-wrapper">
                 <div class="content">
+                    <div class="project">
+                        <aside></aside>
+                        <h4>Project Title</h4>
+                        <a href="https://github.com/lheido/"><i class="icon-github-squared"></i></a>
+                        <section>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ratione expedita accusamus ullam aliquam quod, quae sit at fugiat recusandae tempora earum accusantium aut atque asperiores numquam doloribus, repellat provident?
+                        </section>
+                    </div>
                 </div>
             </div>
         </div><!-- end #android-projects -->
         <div id="web-projects" class="page">
             <div class="content-wrapper">
                 <div class="content">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore perferendis laborum libero alias officiis dicta quam at! Ipsam delectus tempore quo, repellat aspernatur non minus commodi quos. Deleniti hic, cum.
                 </div>
             </div>
         </div><!-- end #web-projects -->
