fix css style project and complete html android-project content

--- a/index.html
+++ b/index.html
@@ -79,11 +79,30 @@
             <div class="content-wrapper">
                 <div class="content">
                     <div class="project">
-                        <aside></aside>
-                        <h4>Project Title</h4>
-                        <a href="https://github.com/lheido/"><i class="icon-github-squared"></i></a>
+                        <aside><img src="https://github.com/lheido/LheidoSMS/blob/master/screenshots/conversation.png?raw=true" alt="screenshot"></aside>
+                        <h4>Lessaging</h4>
+                        <a href="https://github.com/lheido/Lessaging"><i class="icon-github-squared"></i></a>
                         <section>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ratione expedita accusamus ullam aliquam quod, quae sit at fugiat recusandae tempora earum accusantium aut atque asperiores numquam doloribus, repellat provident?
+                            Application Android de messagerie (SMS/MMS). Basée sur le project LheidoSMS.
+                        </section>
+                    </div>
+                    <div class="project">
+                        <aside><img src="https://github.com/lheido/LheidoSMS/blob/master/screenshots/list_conversations.png?raw=true" alt="screenshot"></aside>
+                        <h4>LheidoSMS</h4>
+                        <a href="https://github.com/lheido/LheidoSMS"><i class="icon-github-squared"></i></a>
+                        <section>
+                            Application Android de messagerie (SMS/MMS).
+                            <br/>A la constatation de plsusieurs bugs importants liés à la structure même de l'application, j'ai pris la décision de lancer un nouveau projet (Lessaging) en me basant sur le code de celui-ci.
+                        </section>
+                    </div>
+                    <div class="project">
+                        <aside><img src="https://github.com/lheido/TuxRemote/blob/master/screenshots/server_list.png?raw=true" alt="screenshot"></aside>
+                        <h4>TuxRemote</h4>
+                        <a href="https://github.com/lheido/TuxRemote"><i class="icon-github-squared"></i></a>
+                        <section>
+                            Application Android pour controler à distance un ordinateur tournant sous Linux.
+                            <br/>Utilise le protocol SSH pour dialoguer avec l'ordinateur.
+                            <br/><br/>Un fichier de configuration permet à l'utilisateur de modifier les applications et d'en ajouter des nouvelles.
                         </section>
                     </div>
                 </div>
