add screenshots page_perso.png and complete html web project content

--- a/index.html
+++ b/index.html
@@ -111,7 +111,15 @@
         <div id="web-projects" class="page">
             <div class="content-wrapper">
                 <div class="content">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore perferendis laborum libero alias officiis dicta quam at! Ipsam delectus tempore quo, repellat aspernatur non minus commodi quos. Deleniti hic, cum.
+                    <div class="project">
+                        <aside><img src="https://github.com/lheido/lheido.github.io/blob/master/screenshots/page_perso.pn?raw=true" alt="screenshot"></aside>
+                        <h4>lheido.github.io</h4>
+                        <a href="https://github.com/lheido/lheido.github.io"><i class="icon-github-squared"></i></a>
+                        <section>
+                            Page personnel, réalisé dans le cadre de ma formation (LP SMIN).
+                            <br/>J'ai utilisé des technologies/outils comme SASS, Grunt et git ainsi que des librairies JavaScript tel que Modernizr et Hammerjs.
+                        </section>
+                    </div>
                 </div>
             </div>
         </div><!-- end #web-projects -->
