change duration of translation of content page, fix aside url

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="content-wrapper">
                 <div class="content">
                     <div class="project">
-                        <aside><img src="https://github.com/lheido/lheido.github.io/blob/master/screenshots/page_perso.pn?raw=true" alt="screenshot"></aside>
+                        <aside><img src="https://github.com/lheido/lheido.github.io/blob/master/screenshots/page_perso.png?raw=true" alt="screenshot"></aside>
                         <h4>lheido.github.io</h4>
                         <a href="https://github.com/lheido/lheido.github.io"><i class="icon-github-squared"></i></a>
                         <section>
