--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <a href="https://github.com/lheido/LheidoSMS"><i class="icon-github-squared"></i></a>
                         <section>
                             Application Android de messagerie (SMS/MMS).
-                            <br/>A la constatation de plsusieurs bugs importants liés à la structure même de l'application, j'ai pris la décision de lancer un nouveau projet (Lessaging) en me basant sur le code de celui-ci.
+                            <br/>A la constatation de plusieurs bugs importants liés à la structure même de l'application, j'ai pris la décision de lancer un nouveau projet (Lessaging) en me basant sur le code de celui-ci.
                         </section>
                     </div>
                     <div class="project">
